--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 
 <body>
     <h1 id="emo">hi.</h1>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script>
+        $('#emo').click(function() {
+            window.location.href = 'http://bye.mistergamingtv.com';
+        });
+    </script>
 
 <script type="text/javascript">(function(){window['__CF$cv$params']={r:'6b13f71e28f00eb7',m:'U36bLgjLg32QkGkFnB0uRXNazh2CPj6lOY9ww5XoSHw-1637435289-0-ASXIExw7dXZZ0lXA89r7Uuws8nGpQyCnlV4RxNoOg+00wF7Gt8UyeKNcqglyn2z2Y7P4W6vnMDJsnjXqr2AEXIB9QjBbzOI1KF2/xCgoo3VMnAxyBDpJB4ANqFEYl01nNQ==',s:[0xfdbbb840df,0xc18ec93757],u:'/cdn-cgi/challenge-platform/h/b'}})();</script></body>
 
@@ -47,6 +53,7 @@
     #emo {
 
         font-size: 200px;
+        cursor: pointer;
 
     }
 </style>
