--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script>
         $('#emo').click(function() {
-            window.location.href = 'http://bye.mistergamingtv.com';
+            window.location.href = "http://bye.mistergamingtv.com";
         });
     </script>
 
